added delete user event endpoint
