# src/controllers/chat.rs
@@ -132,49 +132,46 @@ async fn send_message_to_llm(
 			EventDay {
 				morning_events: vec![Event {
 					id: 1,
-					street_address: String::from("1114 Shannon Ln"),
-					postal_code: 17013,
-					city: String::from("Carlisle"),
-					country: String::from("USA"),
-					event_type: String::from("Hike"),
-					event_description: String::from(
+					street_address: Some(String::from("1114 Shannon Ln")),
+					postal_code: Some(17013),
+					city: Some(String::from("Carlisle")),
+					country: Some(String::from("USA")),
+					event_type: Some(String::from("Hike")),
+					event_description: Some(String::from(
 						"A beautiful stroll along a river in this cute small town.",
-					),
+					)),
 					event_name: String::from("Family Walking Path"),
 					user_created: false,
-					account_id: None,
 					hard_start: None,
 					hard_end: None,
 				}],
 				afternoon_events: vec![Event {
 					id: 3,
-					street_address: String::from("200 E 42nd St"),
-					postal_code: 10017,
-					city: String::from("New York"),
-					country: String::from("USA"),
-					event_type: String::from("Museum"),
-					event_description: String::from(
+					street_address: Some(String::from("200 E 42nd St")),
+					postal_code: Some(10017),
+					city: Some(String::from("New York")),
+					country: Some(String::from("USA")),
+					event_type: Some(String::from("Museum")),
+					event_description: Some(String::from(
 						"World famous art museum with a focus on modern works, including Starry Starry Night by VanGough.",
-					),
+					)),
 					event_name: String::from("Museum of Modern Art- MoMA"),
 					user_created: false,
-					account_id: None,
 					hard_start: None,
 					hard_end: None,
 				}],
 				evening_events: vec![Event {
 					id: 4,
-					street_address: String::from("1 S Broad St"),
-					postal_code: 19107,
-					city: String::from("Philadelphia"),
-					country: String::from("USA"),
-					event_type: String::from("Concert"),
-					event_description: String::from(
+					street_address: Some(String::from("1 S Broad St")),
+					postal_code: Some(19107),
+					city: Some(String::from("Philadelphia")),
+					country: Some(String::from("USA")),
+					event_type: Some(String::from("Concert")),
+					event_description: Some(String::from(
 						"Music center which hosts local and national bands.",
-					),
+					)),
 					event_name: String::from("Jazz night at Broad Street"),
 					user_created: false,
-					account_id: None,
 					hard_start: None,
 					hard_end: None,
 				}],
@@ -183,47 +180,44 @@ async fn send_message_to_llm(
 			EventDay {
 				morning_events: vec![Event {
 					id: 5,
-					street_address: String::from("1 Citizens Bank Way"),
-					postal_code: 19148,
-					city: String::from("Philadelphia"),
-					country: String::from("USA"),
-					event_type: String::from("Sports"),
-					event_description: String::from(
+					street_address: Some(String::from("1 Citizens Bank Way")),
+					postal_code: Some(19148),
+					city: Some(String::from("Philadelphia")),
+					country: Some(String::from("USA")),
+					event_type: Some(String::from("Sports")),
+					event_description: Some(String::from(
 						"A Phillies baseball game is a must-do for locals and visitors alike.",
-					),
+					)),
 					event_name: String::from("Phillies Baseball Game"),
 					user_created: false,
-					account_id: None,
 					hard_start: None,
 					hard_end: None,
 				}],
 				afternoon_events: vec![Event {
 					id: 7,
-					street_address: String::from("1 Rue de la Seine"),
-					postal_code: 0,
-					city: String::from("Paris"),
-					country: String::from("France"),
-					event_type: String::from("Museum"),
-					event_description: String::from("Explore the beautiful landmark of Paris."),
+					street_address: Some(String::from("1 Rue de la Seine")),
+					postal_code: Some(0),
+					city: Some(String::from("Paris")),
+					country: Some(String::from("France")),
+					event_type: Some(String::from("Museum")),
+					event_description: Some(String::from("Explore the beautiful landmark of Paris.")),
 					event_name: String::from("Eiffel Tower"),
 					user_created: false,
-					account_id: None,
 					hard_start: None,
 					hard_end: None,
 				}],
 				evening_events: vec![Event {
 					id: 8,
-					street_address: String::from("3 Rue de la Museu"),
-					postal_code: 0,
-					city: String::from("Paris"),
-					country: String::from("France"),
-					event_type: String::from("Museum"),
-					event_description: String::from(
+					street_address: Some(String::from("3 Rue de la Museu")),
+					postal_code: Some(0),
+					city: Some(String::from("Paris")),
+					country: Some(String::from("France")),
+					event_type: Some(String::from("Museum")),
+					event_description: Some(String::from(
 						"Wander the halls of the world famous art museum.",
-					),
+					)),
 					event_name: String::from("le Louvre"),
 					user_created: false,
-					account_id: None,
 					hard_start: None,
 					hard_end: None,
 				}],
